Fix small spacing issue between number 6 and 7.

--- a/ristiseiska.css
+++ b/ristiseiska.css
@@ -84,6 +84,10 @@
     display: inline-block;
 }
 
+.inline_card_row_container.bottom_row {
+    margin-right: 5px;
+}
+
 .inline_card_row {
     display: inline-block;
 }
